--- a/src/coms/message/views/message.html
+++ b/src/coms/message/views/message.html
@@ -1,62 +1,34 @@
 ﻿<div class="empty-nav"></div>
 <div class="container" id="message-container">
 	<header class="head">
-		<span class="numBox">消息记录<span>（5）</span></span>
+		<span class="numBox">消息记录<span>（1）</span></span>
 		<div class="deleteBox"><span class="glyphicon glyphicon-trash"></span>清空所有</div>
 	</header>
 	<ul class="mes_list">
-		<li>
+		<li ng-repeat="list in messageList">
 			<div class="mes_title">
-				<span class="mes_kind">【系统消息】</span>
-				<span class="update">2012/03/24 10:20</span>
+				<span class="mes_kind">{{list.type}}</span>
+				<show-time item-date data-value="{{list.time | date:'yyyy-MM-dd HH:mm:ss'}}"></show-time>
 			</div>
 			<div class="mes_content">
-				通知：系统消息将于2016年3月25日-3月27日进行系统维护
+				通知：{{list.content}}
 			</div>
 		</li>
-		<li>
-			<div class="mes_title">
-				<span class="mes_kind">【个人消息】</span>
-				<span class="update">2012/03/24 10:20</span>
-			</div>
-			<div class="mes_content">
-				通知：系统消息将于2016年3月25日-3月27日进行系统维护
-			</div>
-		</li>
-		<li>
-			<div class="mes_title">
-				<span class="mes_kind">【个人消息】</span>
-				<span class="update">2012/03/24 10:20</span>
-			</div>
-			<div class="mes_content">
-				通知：系统消息将于2016年3月25日-3月27日进行系统维护
-			</div>
-		</li>
-		<li>
-			<div class="mes_title">
-				<span class="mes_kind">【个人消息】</span>
-				<span class="update">2012/03/24 10:20</span>
-			</div>
-			<div class="mes_content">
-				通知：系统消息将于2016年3月25日-3月27日进行系统维护
-			</div>
-		</li>
-		<li>
-			<div class="mes_title">
-				<span class="mes_kind">【个人消息】</span>
-				<span class="update">2012/03/24 10:20</span>
-			</div>
-			<div class="mes_content">
-				通知：系统消息将于2016年3月25日-3月27日进行系统维护
-			</div>
-		</li>
+		
 	</ul>
 	<div class="mes_pagination">
 		<div>
 			<span>共25条，每页显示<input type="text" value="" class="num"/>条</span>
 		</div>
 		<div class="page">
-			
+			<div class="coms-pagination">
+				<uib-pagination num-pages="pageSize" total-items="bigTotalItems" ng-change="pageChanged()" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
+				<div class="page-go">
+					<span class="page-text">转到</span>
+					<input class="page-input" ng-model="pageTo" />
+					<span class="page-go-btn" ng-click="pageChanged(pageTo)">Go</span>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
