fix prepare systemres

--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -319,7 +319,7 @@
     vertical-align: top;
 }
 
-.edit-res-modal img, span {
+.edit-res-modal img, .edit-res-modal span {
     vertical-align: top;
 }
 
