--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -327,7 +327,9 @@
 #preview-container .fix-inner .prepareList li{
     cursor: pointer;
     text-align: left;
-    
+}
+#preview-container .fix-inner .prepareList li:hover{
+    background: @color6;
 }
 #preview-container .curPre
 {
