personal-center css

--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -6,7 +6,7 @@
 			<span class="new-prepare-title" ng-show="list.editPrepareTitle"><input type="text" ng-model="list.title" value="list.title"><button class="btn-op" ng-click="setPrepareTitle($index)">确定</button></span>
 			<i class="icon-edit edit-prepare" ng-click="editPrepare($index)"></i> 
 			<i class="icon-trash" ng-click="deletePrepare($index,$event)"></i>
-			<span class="online-course" ui-sref="onlineres({prepareId: list.id})"><i class="icon-play-circle"></i>在线授课</span>
+			<span class="online-course" ng-click="turnToClass(list)"><i class="icon-play-circle"></i>在线授课</span>
 			<span class="zip-download" ng-click="zipPrepare(list, -1)"><i class="icon-cloud-download"></i> 打包下载</span>
 		</div>
 		<div class="list-content" ng-show="list.active">
