--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -25,7 +25,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-md-8 cen-right">
+			<div class="col-md-8 col-sm-12 cen-right">
 				<div class="cen-right-up">
 					<h3 class="cen-h2">备课统计</h3>
 					<div class="left-arrow">
