--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -227,19 +227,10 @@
     font-size: 1.4rem;
     color: #666666;
 }
-/*
-.resource-list li div {
-    height: 100%;
-}*/
 
-/*
-.resource-list img {
-    width: 30%;
-    height: 80%;
-    padding: 5px;
-    border: 1px solid #12879A;
-    background-color: #FFFFFF;
-}*/
+.resource-list .img-thumb-list {
+    top: 5px;
+}
 
 .my-upload-list .img-thumb-list {
     width: 120px;
@@ -277,6 +268,7 @@
     line-height: 24px;
     border-radius: 4px;
     font-size: 1.3rem;
+    width: 45%;
 }
 
 #btn-delete-some {
@@ -538,6 +530,30 @@
 .com-list .edit
 {
     clear: both;
+}
+
+//自适应页面bug
+@media screen and (min-width : 992px) {
+    .my-upload-list .img-thumb-list {
+        width: 100px;
+        height: 100px;
+        line-height: 100px;
+    }
+
+    .my-upload-list .res-list-thumb {
+        width: 90px;
+        height: 90px;
+    }
+
+    .resource-list span {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .resource-list span {
+        font-size: 1.4rem;
+    }
 }
 
 
