--- a/src/less/res.less
+++ b/src/less/res.less
@@ -391,6 +391,7 @@
     margin-top: 20px;
     color:#040000;
     width: 100%;
+    margin-left: 5px;
 }
 .res-title:hover{
     color: #666;
@@ -406,6 +407,9 @@
 
 .res-number{
    margin-left: 25px; 
+}
+.res-star{
+    margin-left: 5px;
 }
 .res-star i{
     color: #dea618;
