--- a/src/less/header.less
+++ b/src/less/header.less
@@ -16,6 +16,7 @@
     float: left;
     margin: 10px;
     position: relative;
+    cursor: pointer;
 }
 #header .message li a{
     color: @msgColor;
