--- a/src/less/res.less
+++ b/src/less/res.less
@@ -72,7 +72,7 @@
     padding: 0;
     color: #4d4d4d;
 }
-.menu-drop-main .menu-drop-list li{
+.menu-drop-main .menu-drop-list>li{
     float: left;
     padding:8px;
     line-height: 20px;
@@ -91,7 +91,7 @@
     float: left;
     margin-top: 5px;
 }
-.menu-drop-list li:hover{
+.menu-drop-list>li:hover{
     color:#0094CE;
 }
 
