--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -1,10 +1,11 @@
 // 上传 模态框
 // 单独出来，相对独立
 .upload-modal .modal-dialog{
-    width: 800px;
+    width: 900px;
+    height: 700px;
 }
 .upload-modal-body{
-    width: 800px;
+    width: 900px;
     min-height: 500px;
     text-align: left;
     color: #666;
@@ -42,7 +43,7 @@
     color: #DF3D6D;
     font-size: 22px;
     padding: 0 3px;
-    line-height: 25px;
+    vertical-align:middle
 }
 .upload-footer{
     text-align: center;
@@ -98,7 +99,7 @@
     border-bottom: 1px dashed #666;
 }
 .upload-modal .edit-list-left{
-    width: 13%;
+    width: 86px;
 }
 .des-editor{
     width: 500px;
@@ -124,4 +125,24 @@
 .upload-modal .selected{
     color: #fff;
     background: #3FBBCF;
+}
+.upload-modal .menu-drop-main .menu-drop-list li{
+    float: none;
+}
+.upload-modal .menu-drop-main .menu-drop-list{
+    max-height: 200px;
+    overflow-y: auto;
+}
+.upload-modal .edit-list-right{
+    margin-top: 6px;
+}
+.upload-modal .menu-drop-main .menu-drop-list .menu-drop-main {
+    width: 100% !important;
+}
+.upload-modal .tree-embed{
+    position: static;
+    margin-top: 0;
+}
+.upload-modal .tree-embed span{
+
 }
