--- a/src/coms/personal-center/views/upload-modal.html
+++ b/src/coms/personal-center/views/upload-modal.html
@@ -95,8 +95,8 @@
 		<div class="modal-prepare-header">上传资源</div>
 		<div class="edit-upload-res">
 			<div class="row">
-				<div class="col-sm-3">上传资源列表：</div>
-				<table class="col-sm-9 table table-striped table-hover table-bordered">
+				<div class="col-sm-2">资源列表：</div>
+				<table class="col-sm-10 table table-striped table-hover table-bordered">
 					<tr>
 						<td>序号</td>
 						<td>资源名称</td>
@@ -107,20 +107,24 @@
 					</tr>
 				</table>
 			</div>
-			<span class="upload-all" ng-class="addAll? 'add-active':''" ng-click="addAll=true">方式一： 为资源添加统一的信息</span>
-			<span class="upload-onebyone" ng-class="!addAll? 'add-active':''" ng-click="addAll=false">方式二： 为每个资源单独添加信息</span>
+			<!--<span class="upload-all" ng-class="addAll? 'add-active':''" ng-click="addAll=true">方式一： 为资源添加统一的信息</span>
+			<span class="upload-onebyone" ng-class="!addAll? 'add-active':''" ng-click="addAll=false">方式二： 为每个资源单独添加信息</span>-->
 
-			<div class="edit-detail-box" ng-repeat="v in uploadFilesData track by $index">
+			<div class="edit-detail-box">
 				<div class="edit-list" ng-show="!addAll">
 					<span class="red-tip">*</span>
-					<span class="sp-label">资源名称</span>
-					<input type="text" ng-model="res.resTitle" />
-					<!--<button class="btn-op" ng-click="setResTitle(res.title)">确定</button>-->
+					<span class="sp-label">资源名称:</span>
+					<input type="text" ng-model="res.resTitle"/>
+				</div>
+				<div class="edit-list" ng-show="addAll">
+					<span class="red-tip">*</span>
+					<span class="sp-label">资源名称:</span>
+					<input type="text" style="width: 360px;" placeholder="批量上传资源不支持名称修改，可到我的上传修改" disabled=/>
 				</div>
 				<div class="edit-list">
 					<div class="item-left">
 						<span class="red-tip">*</span>
-						<span class="sp-label">资源类型</span>
+						<span class="sp-label">资源类型:</span>
 					</div>
 
 					<div class="item-right">
@@ -131,7 +135,7 @@
 				<div class="edit-list">
 					<div class="edit-list-left">
 						<span class="red-tip">*</span>
-						<span class="sp-label">上传至：</span>
+						<span class="sp-label">上传至:</span>
 					</div>
 
 					<div class="edit-list-right">
@@ -194,6 +198,24 @@
 									</div>
 								</div>
 							</div>
+							
+							<div class="select-nav-item" id="catogry-trigger" ng-click="treeTrigger()" >
+								<div class="menu-drop">
+									<div class="trigger">
+										<span class="select-current" href="">{{ currentNode.label }}</span>
+										<i class="icon-angle-down"></i>
+										<i class="icon-angle-up"></i>
+									</div>
+									<div class="menu-drop-main">
+										<ul class="menu-drop-list tree-embed" ng-show="showTree">
+											<treecontrol id="tree-embed" click-outside="closeThis()" outside-if-not="tree-embed,catogry-trigger" class="tree-light" tree-model="treedataSelect" on-selection="showSelected(node)" expanded-nodes="expandedNodes" options="opts">
+										     	{{node.label}}
+										 	</treecontrol>
+										</ul>
+									</div>
+								</div>
+							</div>
+							
 							<div class="clearfix"></div>
 						</div>
 
@@ -202,19 +224,21 @@
 				</div>
 				<div class="edit-list">
 					<span class="red-tip">*</span>
-					<span class="sp-label">共享范围</span>
+					<span class="sp-label">共享范围:</span>
 					<span class="tag" ng-class="currentScopeSeclet[0]?'selected':''" ng-click="selectScope(0)">仅自己可见</span>
 					<span class="tag" ng-class="currentScopeSeclet[1]?'selected':''" ng-click="selectScope(1)">本校可见</span>
 					<span class="tag" ng-class="currentScopeSeclet[2]?'selected':''" ng-click="selectScope(2)">本区可见</span>
 				</div>
 				<div class="edit-list">
 					<span class="red-tip">*</span>
-					<span class="sp-label">关键词</span>
-					<input type="text" ng-model="res.keywords" class="keyword-input" placeholder="多个关键词用空格隔开" />
+					<span class="sp-label">关键词:</span>
+					<input type="text" ng-model="res.keywords" class="keyword-input" placeholder="多个关键词用英文分号隔开" />
 				</div>
 				<div class="edit-list">
-					<span class="red-tip">*</span>
-					<span class="sp-label">资源介绍</span>
+					<div style="float: left;">
+						<span class="red-tip">*</span>
+						<span class="sp-label">资源介绍:</span>
+					</div>
 					<textarea class="des-editor" ng-model="res.description" placeholder="选填，主要介绍资源的主要内容，方便资源的管理和分享，限200字">
     			</textarea>
 					<!--<span class="sp-count-word"><span ng-model="res.description.length"></span>/200</span>-->
