--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -387,3 +387,8 @@
 {
     border: none !important;
 }
+#preview-container .res-prepare-list-more
+{
+    text-align: left;
+    cursor: pointer;
+}
