--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -15,12 +15,27 @@
     background-color: #FFFFFF;
 }
 
+.user-avatar {
+  
+    .avatar-box {
+        width: 200px;
+        border: none;
+        margin: 0 auto;
+        position: relative;
 
-.user-avatar span {
-    display: block;
-    font-size: 1.6rem;
-    margin-top: 10px;
-    color: #12879A;
+        .edit-avatar-icon {
+            position: absolute;
+            bottom: -5px;
+            right: -10px;
+        }
+    }
+
+    span {
+        display: block;
+        font-size: 1.6rem;
+        margin-top: 10px;
+        color: #12879A;
+    }
 }
 
 .user-school {
