--- a/src/less/customres.less
+++ b/src/less/customres.less
@@ -95,14 +95,14 @@
 #customres-container .img-thumb
 {
     height: 150px;
-    width: 150px;
+    width: 91%;
     margin: 0 auto;
-    line-height: 140px;
+    line-height: 145px;
      background: #f2f2f2;
 }
 
 #customres-container .res-list-thumb{
-   max-width: 140px;
+   max-width: 85%;
    max-height: 140px;
    vertical-align: middle;
   
