显示当前资源名称

--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -3,6 +3,7 @@
 	<div class="header-nav-tips">
 		<div class="nav_left">
 			<span ng-repeat="navCur in currentNav" ng-class="links[$index]?'links':''"  ng-click="back($index,navCur.tfcode)">{{navCur.name}}<i class="icon-angle-right"></i></span>
+			<span>{{VM.resName}}</span>
 		</div>
 		<!--<div class="nav_right">
 		  <span class="mulu" ng-show="otherShow">其他版本目录
