--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -11,8 +11,7 @@
 						<span><img src="assets/img/loc.png" /><i>{{ user.termName }}</i>|<i>{{ user.subjectNames }}老师 </i>|<i ng-class="user.male == '男'? 'icon-male':'icon-female'"></i></span>
 						<span class="user-school"><img class="user-info-icon" src="assets/img/tie.png" />{{ user.schoolName }}</span>
 						<button class="btn-general btn-pink" ng-click="uploadRes()">上传资源</button>
-						
-						<button class="btn-general btn-pink" ng-click="VM.uploadResInfo()">编辑资源</button>
+						<!--<button class="btn-general btn-pink" ng-click="VM.uploadResInfo()">编辑资源</button>-->
 					</div>
 				</div>
 				<div class="op-btn-group nav-item-select">
@@ -62,5 +61,5 @@
 
 <!-- 模态框（Modal） -->
 <!-- 上传模态框 -->
-<div data-ng-include="'/coms/personal-center/views/upload-modal.html'"></div>
+<div data-ng-include="'/coms/layout/modal/modal/upload-modal.html'"></div>
 
