--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -208,13 +208,6 @@
 .list-all-item:hover{
     background: @color4;
 }
-.prepare-gallery{
-    padding: 0 15px;
-}
-.prepare-all-item-img{
-    width: 70%;
-    height: 120px;
-}
 #prepare-content-list .zip-download{
     padding:5px 10px;
     background: @color2;
@@ -351,6 +344,7 @@
 .prepare-gallery{
     margin: 10px;
     position: relative;
+    padding: 0 15px;
     padding-bottom: 30px;
 
     .left-arrow, .right-arrow {
@@ -373,9 +367,10 @@
 
     .prepare-all-item-img {
         width: 70%;
-        height: 130px;
+        height: 110px;
         display: block;
         margin: 15px auto;
+        margin-bottom: 20px;
     }
 
     .list-all-title {
