--- a/src/coms/res-custom/views/customres-content.html
+++ b/src/coms/res-custom/views/customres-content.html
@@ -35,7 +35,8 @@
 	</div>
 
 	<div class="subject_box">
-		
+		<div class="loading" ng-show="VM.load"><i class="icon-spinner icon-spin icon-3x"></i></div>
+
 		<div class="prepare-all-list" ng-repeat="subject in VM.resource">
 			<div class="prepare-all-header">
 				<img class="prepare-all-header-img" src="../../../assets/img/custom/head.png" />
