备课夹样式修改

--- a/src/less/res.less
+++ b/src/less/res.less
@@ -473,13 +473,14 @@
 .res-prepare-list{
     position: absolute;
     right: 36px;
-    top:55px;
+    top:57px;
     background: #fff;
     padding: 10px 20px;
     display: none;
     color: #999;
     min-width: 100px;
     z-index: 99999;
+    border: 2px solid #41C9A9;
 }
 .res-prepare-list-item{
     margin: 5px;
@@ -533,6 +534,7 @@
     color: #999;
     min-width: 100px;
     z-index: 99999;
+    border: 2px solid #41C9A9;
 }
 // 备课夹 悬浮
 .prepare-fixed{
@@ -575,7 +577,7 @@
 }
 .prepare-fixed  .prepare-ctrls{
     float: left;
-    height: 100px;
+    height: 120px;
     width: 150px;
     margin-left: 3px;
     visibility: hidden;
@@ -587,6 +589,7 @@
 }
 .prepare-fixed .ctrls-prepare-list-item{
     font-size: 14px;
+    line-height: 28px;
 }
 .prepare-fixed .ctrls-prepare-list-item:hover{
     color: #219B81;
