--- a/src/less/res.less
+++ b/src/less/res.less
@@ -144,8 +144,9 @@
   background: #0094ce;
   display: inline-block;
   position: relative;
-  top: 13px;
-  right: 10px;
+  top: 9px;
+  right: 6px;
+  cursor: pointer;
 }
 .res-header .icon-search{
     position: absolute;
