--- a/src/less/res.less
+++ b/src/less/res.less
@@ -392,7 +392,7 @@
     font-size: 17px;
     margin-top: 20px;
     color:#040000;
-    width: 100%;
+    width: 350px;
     margin-left: 5px;
 }
 .res-title:hover{
@@ -660,6 +660,7 @@
     position: absolute;
     width: 36px;
     left: 50px;
+    z-index: 999;
 }
 .is-new-thumb{
     position: absolute;
