--- a/src/coms/layout/views/res/res-header.html
+++ b/src/coms/layout/views/res/res-header.html
@@ -21,7 +21,7 @@
 	<div class="select-nav-item">
 		<div class="menu-drop">
 			<div class="trigger">
-				<span class="select-current">{{VM.currentSubject.name}}</span>
+				<span class="select-current">{{VM.currentSubject.name?VM.currentSubject.name:VM.currentSubject}}</span>
 				<i class="icon-angle-down"></i>
 				<i class="icon-angle-up"></i>
 			</div>
