--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -36,8 +36,14 @@
 					<label class="res-size">
 						<res-size data-value="{{list.fsize}}"></res-size>
 					</label><br>
-					<label class="res-star"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></label>
-					
+					<res-star data-value="{{list.avgScore}}"></res-star>
+					<!--<label class="res-star">
+						<i class="icon-star"></i>
+						<i class="icon-star"></i>
+						<i class="icon-star"></i>
+						<i class="icon-star"></i>
+						<i class="icon-star"></i>
+					</label>-->
 					<label class="res-number">{{list.clickTimes}}浏览/{{list.dloadTimes}}下载</label>
 				</span>
 				<span class="res-list-tools">
