--- a/src/less/res.less
+++ b/src/less/res.less
@@ -414,10 +414,14 @@
     margin-left: 5px;
 }
 .res-star i{
-    color: #dea618;
+    color: #666;
     font-size: 16px;
     margin-right: 5px;
 }
+.res-star i.star-active{
+    color: #dea618;
+}
+
 .res-list-tools{
     float: right;
     
