fix add prepare animation

--- a/src/coms/layout/modal/modal/upload-modal.html
+++ b/src/coms/layout/modal/modal/upload-modal.html
@@ -36,7 +36,7 @@
 					</div>
 				</div>
 				<div class="clearfix"></div>
-				<button class="btn btn-success btn-general" ngf-select="uploadFiles($files, $invalidFiles)" ng-model="file" name="file" ngf-pattern="'*'" ngf-accept="'*'" multiple ngf-max-size="150MB"><i class="icon-upload-alt"></i> 上传</button>
+				<button class="btn btn-success btn-general" ngf-select="uploadFiles($files, $invalidFiles)" ng-model="file" name="file" ngf-pattern="'*'" ngf-accept="'*'"  ngf-max-size="150MB"><i class="icon-upload-alt"></i> 上传</button>
 			</div>
 			<div class="continue-upload" ng-hide="firstUpload">
 				<table class="table">
