--- a/src/less/res.less
+++ b/src/less/res.less
@@ -629,6 +629,16 @@
     width: 15px;
     height: 15px;
 }
+
+// 加入备课夹 时，当前备课夹样式改变
+.prepare-fixed  .prepare-add{
+    visibility:visible;
+}
+.prepare-fixed  .prepare-add-item{
+   color: #DF3D6D;
+}
+
+
 .res-text-total{
     margin-left: 30px;
 }
