--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -71,50 +71,6 @@
 		<div ng-controller="resCommentCtrl" data-ng-include="'/coms/res-preview/views/comment.html'"></div>
 	
 	</div>
-	<!-- 备课夹悬浮  -->
-	<div class="prepare-fixed" ng-hide="VM.prepareShow">
-		<div class="prepare-shop" ui-sref="prepare">
-			<img src="assets/img/shopcart.png"/>
-			<span class="shop-count">{{ shopCount }}</span>
-			<div class="prepare-text">备课夹</div>
-		</div>
-		<div class="prepare-ctrls">
-			<div class="ctrls-prepare-list" >
-				<div class="ctrls-prepare-list-item text-ellipsis" ng-repeat="item in prepareList track by $index" >{{$index+1}}、{{item.title}}</div>
-				<div class="ctrls-prepare-list-item text-ellipsis" editable-text="VM.newPrepare">{{ VM.newPrepare}}</div>
-			</div>
-		</div>
-	</div>
-	
 </div>
-<!-- 选择加入 备课夹-->
-<script type="text/ng-template" id="select-prepare.html">
-	<div class="modal-body modal-prepare-body">
-		<div class="modal-prepare-header">选择备课夹</div>
-		<div class="modal-prepare-content">
-			<div class="modal-inner-content">
-				<div class="modal-catogry">
-					<span>教材目录：</span>
-					<span class="catogry-trigger" id="catogry-trigger" ng-click="treeTrigger()" >
-						<span class="select-current" href="">{{ currentNode.label }}</span>
-						<i class="icon-angle-down"></i>
-						<i class="icon-angle-up"></i>
-					</span>
-					<div class="tree-embed" ng-show="showTree">
-						<treecontrol id="tree-embed" click-outside="closeThis()" outside-if-not="tree-embed,catogry-trigger" class="tree-light" tree-model="treedataSelect" on-selection="showSelected(node)" expanded-nodes="expandedNodes" options="opts">
-					     {{node.label}}
-					 	</treecontrol>
-					</div>
-				</div>
-				<div class="modal-prepare-name">
-					<span>备课夹名称：</span>
-					<select ng-change="selectPrepare(currentPrepare)" ng-model="currentPrepare">
-						<option ng-repeat="pp in prepares track by $index" ng-bind="pp.title" value="{{pp}}"></option>
-					</select>
-				</div>
-			</div>
-			<button class="btn btn-lg btn-success btn-custom-modal" ng-click="moveOk()">确定</button>
-			<button class="btn btn-lg btn-success btn-custom-modal" ng-click="moveCancel()">取消</button>
-		</div>	
-	</div>
-</script>
+<!-- 加入备课夹  -->
+<div data-ng-include="'/coms/layout/views/prepare/prepare-add.html'"></div>
