--- a/src/coms/res-school/views/schoolres.html
+++ b/src/coms/res-school/views/schoolres.html
@@ -1,32 +1,2 @@
-﻿<div class="container" id="res-container">
-	<!--header导航-->
-	<div data-ng-include="'/coms/layout/views/res/res-header.html'"></div>
-	<!--左侧目录-->
-	<div class="col-md-3 catalog">
-		<div class="catalog-header"></div>
-		<div class="catalog-content">
-			<div class="catalog-tip">
-				<img src="assets/img/catalog/catalog-tip.png">
-				<div class="catalog-text">{{currentVersion.name == '课标版'?'课标导航':'章节目录'}}</div>
-			</div>
-			<div class="catalog-tree" data-ng-include="'/coms/tree/views/tree.html'"></div>
-		</div>
-	</div>
-	<!--右侧资源列表-->
-	<div class="col-md-9" data-ng-include="'/coms/res-school/views/school-content.html'"></div>
-	
-	<!-- 备课夹悬浮  -->
-	<div class="prepare-fixed">
-		<div class="prepare-shop" ui-sref="prepare">
-			<img src="assets/img/shopcart.png"/>
-			<span class="shop-count">{{ shopCount }}</span>
-			<div class="prepare-text">备课夹</div>
-		</div>
-		<div class="prepare-ctrls">
-			<div class="ctrls-prepare-list" >
-				<div class="ctrls-prepare-list-item text-ellipsis" ng-repeat="item in prepareList track by $index" >{{$index+1}}、{{item.title}}</div>
-				<div class="ctrls-prepare-list-item text-ellipsis" editable-text="VM.newPrepare">{{ VM.newPrepare}}</div>
-			</div>
-		</div>
-	</div>
-</div>
+﻿<!--与系统页同用-->
+<div data-ng-include="'/coms/res-system/views/sysres-content.html'"></div>
