--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -4,8 +4,8 @@
 		<img ui-sref="systemres" class="logo" src="assets/img/logo.png" />
 		<ul class="message">
 			<li><a ui-sref="settings"><i class="icon-user"></i> {{ userTrueName }},欢迎您</a></li>
-			<li><a ui-sref="message">消息</a></li>
-			<li><a ui-sref="help">帮助中心</a></li>
+			<li><a ui-sref="message" target="_new">消息</a></li>
+			<li><a ui-sref="help" target="_new">帮助中心</a></li>
 			<li><a ng-click="logout()">退出</a></li>
 		</ul>
 	</div>
