--- a/src/coms/layout/header/header4.html
+++ b/src/coms/layout/header/header4.html
@@ -6,8 +6,8 @@
 			<span class="section-title">{{pageTitle}}</span>
 			<ul class="message">
 				<li><a ui-sref="settings"><i class="icon-user"></i> {{ userTrueName }},欢迎您</a></li>
-				<li><a ui-sref="message">消息</a></li>
-				<li><a ui-sref="help">帮助中心</a></li>
+				<li><a ui-sref="message" target="_new">消息</a></li>
+				<li><a ui-sref="help" target="_new">帮助中心</a></li>
 				<li><a ng-click="logout()">退出</a></li>
 			</ul>
 		</div>
